syntax = "proto3";

package stremio.core.types;

option java_package = "com.stremio.core.proto.types.addon";

message ResourceRequest{
  string base = 1;
  ResourcePath path = 2;
}

message ResourcePath {
  string resource = 1;
  string type = 2;
  string id = 3;
  repeated ExtraValue extra = 4;
}

message ExtraValue{
  string name = 1;
  string value = 2;
}

enum ResourceType {
  meta = 0;
  stream = 1;
  subtitle = 2;
  catalog = 3;
}

enum ExtraValueType {
  skip = 0;
  search = 1;
  genre = 2;
}