syntax = "proto3";

package stremio.core.types;

option java_package = "com.stremio.core.proto.types.resource";

import "google/protobuf/timestamp.proto";
import "stremio/core/types/stream.proto";
import "stremio/core/types/video.proto";

message MetaItem {
  string id = 1;
  string type = 2;
  string name = 3;
  PosterShape poster_shape = 4;
  optional string poster = 5;
  optional string background = 6;
  optional string logo = 7;
  optional string description = 8;
  optional string release_info = 9;
  optional string runtime = 10;
  optional google.protobuf.Timestamp released = 11;
  repeated Link links = 12;
  repeated Stream trailer_streams = 13;
  repeated Video videos = 14;
  MetaItemBehaviorHints behavior_hints = 15;
  MetaItemDeepLinks deep_links = 16;
}

enum PosterShape {
  Poster = 0;
  Landscape = 1;
  Square = 2;
}

message Link {
  string name = 1;
  string category = 2;
  string url = 3;
}

message MetaItemBehaviorHints {
  optional string default_video_id = 1;
  optional string featured_video_id = 2;
  bool has_scheduled_videos = 3;
}

message MetaItemDeepLinks {
  optional string meta_details_videos = 1;
  optional string meta_details_streams = 2;
  optional string player = 3;
}